[gd_scene format=3 uid="uid://iuloeuoiu3mf"]

[ext_resource type="PackedScene" uid="uid://bvdbogspriemp" path="res://interface/components/context_menu/context_menu_base.tscn" id="1_13jm2"]
[ext_resource type="Texture2D" uid="uid://d3vb2bm6jy37n" path="res://icons/edit.png" id="2_mpibw"]
[ext_resource type="Script" uid="uid://bkemhetqbwe5w" path="res://interface/components/context_menu/private_channel_context_menu.gd" id="2_r602i"]
[ext_resource type="Texture2D" uid="uid://bfykibbbwvwkg" path="res://icons/delete.png" id="3_r602i"]
[ext_resource type="Texture2D" uid="uid://8fxdu703xrgt" path="res://icons/close.png" id="5_r602i"]

[node name="PrivateChannelContextMenu" unique_id=319957489 instance=ExtResource("1_13jm2")]
script = ExtResource("2_r602i")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="0" unique_id=497492322]
layout_mode = 2
text = "Private Channel"
horizontal_alignment = 1

[node name="RenameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="1" unique_id=1029995303]
layout_mode = 2
text = "Rename"
icon = ExtResource("2_mpibw")
alignment = 0
expand_icon = true

[node name="PurgeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="2" unique_id=1976133171]
layout_mode = 2
theme_type_variation = &"Button_Red"
text = "Purge Messages"
icon = ExtResource("3_r602i")
alignment = 0
expand_icon = true

[node name="PurgeConfirmation" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="3" unique_id=1785528832]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PurgeConfirmation" index="0" unique_id=1153776340]
layout_mode = 2
text = "Are you sure?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PurgeConfirmation" index="1" unique_id=499609197]
layout_mode = 2

[node name="CanclePurgeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PurgeConfirmation/HBoxContainer" index="0" unique_id=2105190555]
layout_mode = 2
size_flags_horizontal = 3
text = "No"
icon = ExtResource("5_r602i")
alignment = 0

[node name="ConfirmPurgeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PurgeConfirmation/HBoxContainer" index="1" unique_id=234691360]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Button_Red"
text = "Yes"
icon = ExtResource("3_r602i")
alignment = 0

[node name="DeleteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="4" unique_id=2014467180]
layout_mode = 2
theme_type_variation = &"Button_Red"
text = "Delete Chat"
icon = ExtResource("3_r602i")
alignment = 0
expand_icon = true

[node name="DeleteConfirmation" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="5" unique_id=347795928]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DeleteConfirmation" index="0" unique_id=1343874655]
layout_mode = 2
text = "Are you sure?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/DeleteConfirmation" index="1" unique_id=1175742018]
layout_mode = 2

[node name="CancelDeleteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DeleteConfirmation/HBoxContainer" index="0" unique_id=360610581]
layout_mode = 2
size_flags_horizontal = 3
text = "No"
icon = ExtResource("5_r602i")
alignment = 0

[node name="ConfirmDeleteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DeleteConfirmation/HBoxContainer" index="1" unique_id=1990581655]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Button_Red"
text = "Yes"
icon = ExtResource("3_r602i")
alignment = 0

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RenameButton" to="." method="_on_rename_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PurgeButton" to="." method="_on_purge_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PurgeConfirmation/HBoxContainer/CanclePurgeButton" to="." method="_on_cancle_purge_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PurgeConfirmation/HBoxContainer/ConfirmPurgeButton" to="." method="_on_confirm_purge_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DeleteConfirmation/HBoxContainer/CancelDeleteButton" to="." method="_on_cancel_delete_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DeleteConfirmation/HBoxContainer/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
